tests/src/frontend/expand/invalid/unbound_algebraic_class.sk
base class Foo() {
  children =
  | Bar()
  | Baz()

  fun f(): void
  | Bar() -> void
  | Whaaaa() -> void
}
